fix all compilation warnings